# CPP-Temp-Short

./: CMakeLists.txt
app/: CMakeLists.txt  main.cc
src/my_lib/: CMakeLists.txt  my_lib.cc  my_lib.h
